--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.0.7",
     "morgan": "~1.9.0",
     "serve-favicon": "^2.5.0",
+    "uuid": "^3.3.2",
     "winston": "^2.4.0",
     "winston-daily-rotate-file": "^1.7.2"
   },
