--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "body-parser": "~1.18.2",
+    "connect-redis": "^3.3.3",
     "ejs": "^2.6.1",
     "express": "~4.15.5",
     "express-jwt": "^5.3.0",
